fix cropper + select

--- a/src/app/_shared/modules/select/components/select-list/select-list.component.scss
+++ b/src/app/_shared/modules/select/components/select-list/select-list.component.scss
@@ -18,6 +18,8 @@
     border-bottom: 1px solid $border-color;
     padding-top: 0;
     padding-bottom: 0;
+    max-height: 400px;
+    overflow-y: scroll;
 
     li.dropdown-item {
       cursor: pointer;
